<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">launcher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="watch_tv">看电视</string>
    <string name="popular">流行榜</string>
    <string name="application">应用</string>
    <string name="settings">设置</string>
    <string name="ifeng_new">凤凰新闻</string>
    <string name="cartoon">儿童动漫</string>
    <string name="movie_and_soap_drama">电影电视剧</string>
    <string name="education_online">网上课程</string>
    <string name="fun_time">轻松一刻</string>
    <string name="multi_screen">手机多屏</string>
    <string name="sina_news">新浪新闻</string>
    <string name="dou_guo_mei_shi">豆果美食</string>
    <string name="jd">京东购物</string>
    <string name="gu_piao">股票行情</string>
    <string name="dang_dang">当当购物</string>
    <string name="travel">旅游</string>
    <string name="app_store">应用商店</string>
    <string name="network_setup">网络设置</string>
    <string name="auto_set_wired_network_ip">自动获取有线网络IP</string>
    <string name="wireless_network_setup">无线网络设置</string>
    <string name="manual_set_wired_network_ip">手动设置有线网络IP</string>
    <string name="more_app">更多应用</string>
    <string name="password">密码&#160;&#160;:</string>
    <string name="please_input_password">请输入密码</string>
    <string name="connect">连接</string>
    <string name="forget">忘记</string>
    <string name="not_reach">不在范围内</string>
    <string name="aleady_connect">已连接</string>
    <string name="connecting">正在连接</string>
    <string name="auto_get_ip_please_wait">自动获取IP,请稍候\u2026</string>
    <string name="obtaining_ipaddr">正在连接</string>
    <string name="authentivating">正在识别</string>
    <string name="wired_auto_subhead">按确定键自动获取IP</string>
    <string name="connect_fail">连接失败</string>

</resources>
