<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/network_dialog_layout"
    android:background="@drawable/network_dialog_bg">

    <TextView
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="68dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/network_setup"
        android:id="@+id/textView"
        android:textSize="40sp"
        />

    <LinearLayout
        android:background="@drawable/item_selector_bg"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp">
            <TextView
                android:layout_marginLeft="12dp"
                android:paddingLeft="30dp"
                android:background="@drawable/item_selector_bg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/auto_set_wired_network_ip"
                android:id="@+id/tv_auto_wired"
                android:layout_gravity="left|center_vertical"
                android:textSize="30sp"
                android:textColor="@drawable/sel_network_setup_item_text"                 />

        <TextView
            android:textColor="@android:color/darker_gray"
            android:layout_marginLeft="12dp"
            android:paddingLeft="30dp"
            android:textSize="20sp"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:id="@+id/tv_wired_auto_stated"
            android:visibility="gone"></TextView>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/item_selector_bg"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp">
            <TextView
                android:layout_marginLeft="12dp"
                android:paddingLeft="30dp"
                android:background="@drawable/item_selector_bg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/wireless_network_setup"
                android:id="@+id/tv_auto_wireless"
                android:layout_gravity="left|center_vertical"
                android:textSize="30sp"
                android:textColor="@drawable/sel_network_setup_item_text" />

        <TextView
            android:textColor="@android:color/darker_gray"
            android:layout_marginLeft="12dp"
            android:paddingLeft="30dp"
            android:visibility="gone"
            android:textSize="20sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_wireless_auto_stated"
            ></TextView>

        <ListView
            android:layout_marginLeft="12dp"
            android:listSelector="@drawable/item_selector_bg"
            android:background="@android:color/transparent"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:id="@+id/lv_wireless_ssid"
            ></ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"     >

        <TextView
            android:layout_marginLeft="12dp"
            android:paddingLeft="30dp"
            android:background="@drawable/item_selector_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/manual_set_wired_network_ip"
            android:id="@+id/tv_manul_wired"
            android:layout_gravity="left|center_vertical"
            android:textSize="30sp"
            android:textColor="@drawable/sel_network_setup_item_text" />
    </LinearLayout>


</LinearLayout>